--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>My First Site</title><link rel="stylesheet" href="style.css"></head><body><h1>Hello Zahra!</h1></body></html>
+<!DOCTYPE html><html><head><title>My First Site</title><link rel="stylesheet" href="style.css"></head><body><h1>Hello Zahra! Welcome to the new feature page</h1></body></html>
